--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -109,9 +109,9 @@
   },
   "dependencies": {
     "@applitools/eyes-api": "1.1.6",
-    "@applitools/eyes-sdk-core": "12.24.6",
-    "@applitools/spec-driver-webdriverio": "1.2.2",
-    "@applitools/visual-grid-client": "15.8.52"
+    "@applitools/eyes-sdk-core": "12.24.7",
+    "@applitools/spec-driver-webdriverio": "1.2.3",
+    "@applitools/visual-grid-client": "15.8.53"
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.3",
@@ -127,6 +127,7 @@
     "@wdio/dot-reporter": "^7.16.4",
     "@wdio/local-runner": "^7.16.5",
     "@wdio/mocha-framework": "^7.16.4",
+    "@wdio/types": "^7.16.11",
     "chromedriver": "^95.0.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^7.2.0",
