--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -62,6 +62,10 @@ runs:
           echo "::endgroup::"
         fi
 
+        echo "${APPLITOOLS_WEBDRIVERIO_MAJOR_VERSION}-version"
+        echo ./tsconfig\"$([ ! -z $APPLITOOLS_WEBDRIVERIO_MAJOR_VERSION ] && echo .v$APPLITOOLS_WEBDRIVERIO_MAJOR_VERSION)\".json
+        echo "%APPLITOOLS_WEBDRIVERIO_MAJOR_VERSION%-version"
+
         echo "::group::Building package"
         npm run build --if-present
         echo "::endgroup::"
