--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -47,14 +47,14 @@ runs:
         echo "always-auth=true" >> .npmrc
         if [ "${{runner.os}}" = "Windows" ]
         then
-          npm config set script-shell "C:\Program Files\Git\bin\bash.EXE --noprofile --norc -e -o pipefail {0}"
-          yarn config set script-shell "C:\Program Files\Git\bin\bash.EXE --noprofile --norc -e -o pipefail {0}"
+          npm config set script-shell "C:\\Program Files\\Git\\bin\\bash.exe"
         fi
         echo "::endgroup::"
 
         echo "::group::Installing and updating dependencies"
         cd "packages/${{inputs.package}}"
         yarn install
+        yarn upgrade --latest @applitools/eyes-api @applitools/eyes-sdk-core @applitools/spec-driver-webdriverio @applitools/visual-grid-client @applitools/api-extractor @applitools/scripts @applitools/sdk-coverage-tests @applitools/sdk-release-kit @applitools/sdk-shared @applitools/test-utils
         npm run deps --if-present -- --skip-commit
         if [ ! -z "${{inputs.install}}" ]; then yarn add --dev ${{inputs.install}}; fi
         echo "::endgroup::"
