--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -54,7 +54,7 @@ runs:
         echo "::group::Installing and updating dependencies"
         cd "packages/${{inputs.package}}"
         yarn install
-        yarn upgrade --latest @applitools/eyes-api @applitools/eyes-sdk-core @applitools/spec-driver-webdriverio @applitools/visual-grid-client @applitools/api-extractor @applitools/scripts @applitools/sdk-coverage-tests @applitools/sdk-release-kit @applitools/sdk-shared @applitools/test-utils
+        node -e 'child_process.spawn("yarn deps", [], {shell: "C:\\Program Files\\Git\\bin\\bash.exe", stdio: "inherit"})' 
         npm run deps --if-present -- --skip-commit
         if [ ! -z "${{inputs.install}}" ]; then yarn add --dev ${{inputs.install}}; fi
         echo "::endgroup::"
