--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -54,7 +54,7 @@ runs:
         echo "::group::Installing and updating dependencies"
         cd "packages/${{inputs.package}}"
         yarn install
-        C:\\Program Files\\Git\\bin\\bash.exe -c "yarn deps"
+        C:\\Program\ Files\\Git\\bin\\bash.exe -c "yarn deps"
         node -e 'child_process.spawn("C:\\Program Files\\Git\\bin\\bash.exe", ["-c", "yarn deps"], {stdio: "inherit"})'
         npm run deps --if-present -- --skip-commit
         if [ ! -z "${{inputs.install}}" ]; then yarn add --dev ${{inputs.install}}; fi
