--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -59,7 +59,7 @@ runs:
         yarn install
         C:\\Program\ Files\\Git\\bin\\bash.exe -c "yarn upgrade --latest @applitools/eyes-api @applitools/eyes-sdk-core @applitools/spec-driver-webdriverio @applitools/visual-grid-client @applitools/api-extractor @applitools/scripts @applitools/sdk-coverage-tests @applitools/sdk-release-kit @applitools/sdk-shared @applitools/test-utils"
         node -e 'child_process.spawn("yarn upgrade --latest @applitools/eyes-api @applitools/eyes-sdk-core @applitools/spec-driver-webdriverio @applitools/visual-grid-client @applitools/api-extractor @applitools/scripts @applitools/sdk-coverage-tests @applitools/sdk-release-kit @applitools/sdk-shared @applitools/test-utils", {shell: "C:\\Program Files\\Git\\bin\\bash.exe", stdio: "inherit"})'
-        sudo npm run deps --if-present -- --skip-commit
+        npm run deps --if-present -- --skip-commit
         if [ ! -z "${{inputs.install}}" ]; then yarn add --dev ${{inputs.install}}; fi
         echo "::endgroup::"
 
