--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -59,7 +59,9 @@ runs:
         yarn install
         whoami
         ls -la D:\\a\\eyes.sdk.javascript1\\eyes.sdk.javascript1\\packages\\eyes-webdriverio-5\\node_modules\\.bin\\bongo
-        yarn deps --skip-commit
+
+        npx bongo deps --skip-commit
+        npm run deps --if-present -- --skip-commit
         if [ ! -z "${{inputs.install}}" ]; then yarn add --dev ${{inputs.install}}; fi
         echo "::endgroup::"
 
