--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -60,8 +60,9 @@ runs:
         whoami
         ls -la D:\\a\\eyes.sdk.javascript1\\eyes.sdk.javascript1\\packages\\eyes-webdriverio-5\\node_modules\\.bin\\bongo
 
-        npm exec -c whoami
+        npm run whoami
         npm run deps --if-present -- --skip-commit
+        npm exec -c whoami
         if [ ! -z "${{inputs.install}}" ]; then yarn add --dev ${{inputs.install}}; fi
         echo "::endgroup::"
 
