--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -57,12 +57,8 @@ runs:
         echo "::group::Installing and updating dependencies"
         cd "packages/${{inputs.package}}"
         yarn install
-        whoami
-        ls -la D:\\a\\eyes.sdk.javascript1\\eyes.sdk.javascript1\\packages\\eyes-webdriverio-5\\node_modules\\.bin\\bongo
-
-        npm run whoami
+        sleep 20
         npm run deps --if-present -- --skip-commit
-        npm exec -c whoami
         if [ ! -z "${{inputs.install}}" ]; then yarn add --dev ${{inputs.install}}; fi
         echo "::endgroup::"
 
