--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -45,16 +45,18 @@ runs:
         echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
         echo "registry=https://registry.npmjs.org/" >> .npmrc
         echo "always-auth=true" >> .npmrc
-        if [ "${{runner.os}}" = "Windows" ]
-        then
-          npm config set script-shell "C:\\Program Files\\Git\\bin\\bash.exe"
-        fi
+        if [ "${{runner.os}}" = "Windows" ]; then npm config set script-shell "C:\\Program Files\\Git\\bin\\bash.exe"; fi
         echo "::endgroup::"
 
         echo "::group::Installing and updating dependencies"
         cd "packages/${{inputs.package}}"
         yarn install
-        npm run deps --if-present $([ "${{runner.os}}" = "Windows" ] && echo --script-shell $COMSPEC) -- --skip-commit
+        if [ "${runner.os}" = "Windows" ]
+        then
+          npm run deps --if-present --script-shell $COMSPEC -- --skip-commit
+        else
+          npm run deps --if-present -- --skip-commit
+        fi
         if [ ! -z "${{inputs.install}}" ]; then yarn add --dev ${{inputs.install}}; fi
         echo "::endgroup::"
 
@@ -71,6 +73,7 @@ runs:
         echo "::endgroup::"
 
         echo "::group::Setting up test environment"
+        if [ "${runner.os}" = "Windows" ]; then C:\Program\ Files\docker\DockerCLI.exe -SwitchLinuxEngine; fi
         npm run setup --if-present
         echo "::endgroup::"
 
