--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -44,7 +44,9 @@
     "build:bin": "pkg ./dist/cli.js --out-path ./bin --compress GZip --targets node16-linux-x64,node16-macos-x64,node16-win-x64 && mv ./bin/cli-macos ./bin/eyes-universal-macos && mv ./bin/cli-linux ./bin/eyes-universal-linux && mv ./bin/cli-win.exe ./bin/eyes-universal-win.exe",
     "build:zip": "zip -j ./bin/eyes-universal.zip ./bin/eyes-universal-linux ./bin/eyes-universal-macos ./bin/eyes-universal-win.exe",
     "build:tgz": "tar -czf ./bin/eyes-universal.tar.gz -C ./bin ./eyes-universal-linux ./eyes-universal-macos ./eyes-universal-win.exe",
-    "test": "echo 'mocha ./test/**/*.spec.js --no-timeouts'",
+    "test": "yarn test:it && yarn test:e2e",
+    "test:it": "mocha ./test/it/*.spec.js --no-timeouts",
+    "test:e2e": "mocha ./test/e2e/*.spec.js --no-timeouts",
     "deps": "bongo deps",
     "preversion": "bongo preversion && yarn build && yarn build:zip && yarn build:tgz",
     "version": "yarn build && bongo version",
