--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -45,8 +45,8 @@
     "build:zip": "zip -j ./bin/eyes-universal.zip ./bin/eyes-universal-linux ./bin/eyes-universal-macos ./bin/eyes-universal-win.exe",
     "build:tgz": "tar -czf ./bin/eyes-universal.tar.gz -C ./bin ./eyes-universal-linux ./eyes-universal-macos ./eyes-universal-win.exe",
     "test": "yarn test:it && yarn test:e2e",
-    "test:it": "mocha ./test/it/*.spec.js --no-timeouts",
-    "test:e2e": "mocha ./test/e2e/*.spec.js --no-timeouts",
+    "test:it": "echo 'mocha ./test/it/*.spec.js --no-timeouts'",
+    "test:e2e": "mocha ./test/e2e/*.spec.ts --no-timeouts -r ts-node/register",
     "deps": "bongo deps",
     "preversion": "bongo preversion && yarn build && yarn build:zip && yarn build:tgz",
     "version": "yarn build && bongo version",
