--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -66,6 +66,7 @@
     "@applitools/sdk-release-kit": "^0.13.10",
     "@applitools/test-utils": "^1.0.10",
     "@applitools/types": "1.0.23",
+    "@types/mocha": "^9.0.0",
     "@types/ws": "^7.4.4",
     "@types/yargs": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
