[universal] change default port

--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -46,7 +46,7 @@
     "build:tgz": "tar -czf ./bin/eyes-universal.tar.gz -C ./bin ./eyes-universal-linux ./eyes-universal-macos ./eyes-universal-win.exe",
     "test": "yarn test:it && yarn test:e2e",
     "test:it": "echo 'mocha ./test/it/*.spec.js --no-timeouts'",
-    "test:e2e": "mocha ./test/e2e/*.spec.ts --no-timeouts -r ts-node/register",
+    "test:e2e": "mocha ./test/e2e/*.spec.ts --exit --no-timeouts -r ts-node/register",
     "deps": "bongo deps",
     "preversion": "bongo preversion && yarn build && yarn build:zip && yarn build:tgz",
     "version": "yarn build && bongo version",
