[scripts] add up script

--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -12,8 +12,11 @@ inputs:
     description: remote type (local, eg)
     type: string
     default: local
-  install:
-    description: names of packages to install before testing
+  framework:
+    description: name of the related framework
+    type: string
+  framework-version:
+    description: version of the related framework
     type: string
   links:
     description: names of package directories to link before testing
@@ -57,7 +60,6 @@ runs:
         else
           npm run deps --if-present -- --skip-commit
         fi
-        if [ ! -z "${{inputs.install}}" ]; then yarn add --dev ${{inputs.install}}; fi
         echo "::endgroup::"
 
         if [ ! -z "${{inputs.links}}" ]
@@ -65,6 +67,13 @@ runs:
           echo "::group::Linking dependencies"
           npx link --include scripts --install
           node ./node_modules/.bin/link --include ${{inputs.links}} --build --install --max-depth ${{inputs.linking-depth}}
+          echo "::endgroup::"
+        fi
+
+        if [ ! -z "${{inputs.framework-version}}" ]
+        then
+          echo "::group::Upgrading ${{inputs.framework}} to version ${{inputs.framework-version}}"
+          npx up ${{inputs.frameworks}} --package-version ${{inputs.framework-version}}
           echo "::endgroup::"
         fi
 
