--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -15,7 +15,8 @@
   "author": "Applitools team <team@applitools.com>",
   "bin": {
     "render": "./cli/render.js",
-    "link": "./cli/link.js"
+    "link": "./cli/link.js",
+    "up": "./cli/up.js"
   },
   "files": [
     "cli",
@@ -35,19 +36,21 @@
     }
   },
   "dependencies": {
-    "@applitools/test-utils": "1.0.3",
+    "@applitools/test-utils": "1.0.10",
     "chalk": "3.0.0",
     "cli-table3": "0.6.0",
     "yargs": "15.3.1"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.13.0",
-    "eslint": "^6.6.0",
-    "eslint-plugin-import": "^2.18.2",
+    "@applitools/sdk-release-kit": "0.13.10",
+    "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "mocha": "^8.1.3"
+    "eslint-plugin-prettier": "^4.0.0",
+    "mocha": "^8.1.3",
+    "prettier": "^2.5.1"
   },
   "engines": {
     "node": ">=12.0.0"
