--- a/packages/spec-driver-webdriverio/package.json
+++ b/packages/spec-driver-webdriverio/package.json
@@ -95,13 +95,13 @@
     }
   },
   "dependencies": {
-    "@applitools/types": "1.0.22",
-    "@applitools/utils": "1.2.4"
+    "@applitools/types": "1.0.23",
+    "@applitools/utils": "1.2.11"
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.3",
-    "@applitools/scripts": "1.0.1",
-    "@applitools/sdk-release-kit": "0.13.4",
+    "@applitools/scripts": "1.1.0",
+    "@applitools/sdk-release-kit": "0.13.10",
     "@applitools/test-utils": "1.0.10",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.2",
@@ -118,7 +118,7 @@
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
     "ttypescript": "^1.5.12",
-    "typescript": "^4.5.0-beta",
+    "typescript": "^4.5.4",
     "webdriverio": "^7.16.12"
   },
   "peerDependencies": {
