[gh] add debug log

--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -48,6 +48,7 @@ runs:
         echo "::group::Installing and updating dependencies"
         cd "packages/${{inputs.package}}"
         yarn install
+        npm ls webdriverio
         if [ "${{runner.os}}" = "Windows" ]
         then
           npm run deps --if-present --script-shell $COMSPEC -- --skip-commit
