[gh] ignore exit code of debug log

--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -48,7 +48,7 @@ runs:
         echo "::group::Installing and updating dependencies"
         cd "packages/${{inputs.package}}"
         yarn install
-        npm ls webdriverio
+        npm ls webdriverio || 1
         if [ "${{runner.os}}" = "Windows" ]
         then
           npm run deps --if-present --script-shell $COMSPEC -- --skip-commit
@@ -67,7 +67,7 @@ runs:
 
         echo "::group::Building package"
         echo "APPLITOOLS_WEBDRIVERIO_MAJOR_VERSION=$APPLITOOLS_WEBDRIVERIO_MAJOR_VERSION"
-        npm ls webdriverio
+        npm ls webdriverio || 1
         npm run build --if-present
         echo "::endgroup::"
 
