[gh] add UNIVERSAL_SLACK_WEBHOOK_URL to secrets

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,3 +49,4 @@ jobs:
       SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
       NPM_TOKEN: ${{secrets.NPM_TOKEN}}
       AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
+      UNIVERSAL_SLACK_WEBHOOK_URL: ${{secrets.UNIVERSAL_SLACK_WEBHOOK_URL}}
