--- a/.github/workflows/reusable-publish.yml
+++ b/.github/workflows/reusable-publish.yml
@@ -24,6 +24,8 @@ on:
         required: true
       AZURE_STORAGE_CONNECTION_STRING:
         required: true
+      UNIVERSAL_SLACK_WEBHOOK_URL:
+        required: true
 env:
   CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
   CVG_TESTS_EG_REMOTE: ${{secrets.CVG_TESTS_EG_REMOTE}}
@@ -423,7 +425,7 @@ jobs:
       - name: Send slack notification
         uses: slackapi/slack-github-action@v1.16.0
         with:
-          payload: "{\"blocks\":[{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"Universal SDK has been released under the tag <https://github.com/applitools/eyes.sdk.javascript1/releases/tag/${{steps.publish.outputs.tag}}|${{steps.publish.outputs.tag}}> 🎉 🎊 🥳\"}},{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"Binaries ZIP archive\"},\"accessory\":{\"type\":\"button\",\"text\":{\"type\":\"plain_text\",\"text\":\"Download\",\"emoji\":true},\"url\":\"https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{steps.publish.outputs.tag}}/eyes-universal.zip\"}}]}"
+          payload: "{\"blocks\":[{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"@channel *Universal SDK* has been released under the tag <https://github.com/applitools/eyes.sdk.javascript1/releases/tag/${{steps.publish.outputs.tag}}|${{steps.publish.outputs.tag}}> 🎉 🎊 🥳\"}},{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"Binaries ZIP archive\"},\"accessory\":{\"type\":\"button\",\"text\":{\"type\":\"plain_text\",\"text\":\"Download\",\"emoji\":true},\"url\":\"https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{steps.publish.outputs.tag}}/eyes-universal.zip\"}}]}"
         env:
           SLACK_WEBHOOK_URL: ${{secrets.UNIVERSAL_SLACK_WEBHOOK_URL}}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
