--- a/packages/eyes-selenium-universal/package.json
+++ b/packages/eyes-selenium-universal/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@applitools/eyes-api": "1.1.6",
     "@applitools/eyes-universal": "0.2.0",
+    "@applitools/spec-driver-selenium": "^1.3.0",
     "@applitools/types": "1.0.21",
     "@applitools/utils": "1.2.4",
     "chalk": "4.1.0",
