--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,7 +39,7 @@ jobs:
     name: Publish
     uses: applitools/eyes.sdk.javascript1/.github/workflows/reusable-publish.yml@master
     with:
-      schema: '${{needs.setup.outputs.packages}}'
+      schema: ${{needs.setup.outputs.packages}}
     secrets:
       CVG_TESTS_EG_REMOTE: ${{secrets.CVG_TESTS_EG_REMOTE}}
       APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY}}
