--- a/.github/workflows/publish-core.yml
+++ b/.github/workflows/publish-core.yml
@@ -1,4 +1,4 @@
-name: Publish Core
+name: Publish core
 
 on:
   workflow_dispatch:
@@ -50,6 +50,7 @@ jobs:
     strategy:
       matrix:
         node-version: ['12', '14', '16']
+    name: 'Test (node: ${{matrix.displayName}})'
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -64,6 +65,7 @@ jobs:
           package: eyes-sdk-core
   publish:
     needs: [test]
+    name: Publish
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
