--- a/.github/workflows/publish-core.yml
+++ b/.github/workflows/publish-core.yml
@@ -14,7 +14,7 @@ on:
       version:
         description: version type
         type: string
-        default: ${{github.event.input.version}}
+        default: patch
         required: false
     secrets:
       CVG_TESTS_EG_REMOTE:
@@ -50,7 +50,7 @@ jobs:
     strategy:
       matrix:
         node-version: ['12', '14', '16']
-    name: 'Test (node: ${{matrix.displayName}})'
+    name: 'Test (node: ${{matrix.node-version}})'
     runs-on: ubuntu-latest
     steps:
       - name: Check-out repository
@@ -78,4 +78,4 @@ jobs:
         uses: ./.github/actions/publish
         with:
           package: eyes-sdk-core
-          version: ${{inputs.version}}
+          version: ${{inputs.version || github.event.inputs.version}}
