[gh] update wdio publish wf

--- a/.github/workflows/publish-wdio.yml
+++ b/.github/workflows/publish-wdio.yml
@@ -66,6 +66,15 @@ jobs:
         uses: ./.github/actions/tests
         with:
           package: eyes-webdriverio-5
+      - name: Upload testing artifacts
+        if: ${{matrix.node-version == '16' && matrix.framework-version == '7'}}
+        uses: actions/upload-artifact@v2
+        with:
+          name: wdio-test-report
+          retention-days: 2
+          path: |
+            packages/${{matrix.dirname}}/coverage-tests-metadata.json
+            packages/${{matrix.dirname}}/coverage-test-report.xml
   publish:
     needs: [test]
     name: Publish
@@ -77,6 +86,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: lts/*
+      - name: Download testing artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: wdio-test-report
+          path: packages/eyes-webdriverio-5
       - name: Publish to NPM
         uses: ./.github/actions/publish
         with:
